# code-rag

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PUBLISH.md  README.md  conftest.py  env.example  init.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_filtering.py  test_mcp_server.py
.github/workflows/: ci.yml
docs/: IMPLEMENTATION.md  code_chunking.md  mcp.md
scripts/: install.sh  release.py
src/: __init__.py  __main__.py  api.py  embedding_server.py  logger.py  main.py  mcp_server.py
src/code_rag/: __main__.py  api.py  embedding_server.py  logger.py  main.py  mcp_server.py  setup_wizard.py
src/code_rag/config/: __init__.py  config.py
src/code_rag/database/: __init__.py  chroma_database.py  database_interface.py
src/code_rag/embeddings/: __init__.py  http_embedding.py  litellm_embedding.py  openai_embedding.py  sentence_transformer_embedding.py
src/code_rag/processor/: __init__.py  file_processor.py  syntax_chunker.py
src/code_rag/reranker/: __init__.py  cross_encoder_reranker.py  http_reranker.py  reranker_interface.py
src/code_rag/search/: __init__.py  query_analyzer.py
src/config/: __init__.py  config.py
src/database/: __init__.py  chroma_database.py  database_interface.py  qdrant_database.py
src/embeddings/: __init__.py  embedding_interface.py  http_embedding.py  openai_embedding.py  sentence_transformer_embedding.py
src/index/: __init__.py  metadata_index.py
src/processor/: __init__.py  file_processor.py  syntax_chunker.py
src/reranker/: __init__.py  cross_encoder_reranker.py  http_reranker.py  reranker_interface.py
tests/: conftest.py  test_api.py  test_config.py  test_database.py  test_embedding_server.py  test_embeddings.py  test_file_processor.py  test_filtering.py  test_hybrid_search.py  test_mcp_reranker_switch.py  test_mcp_server.py  test_metadata_index.py  test_query_analyzer.py  test_request_during_model_loading.py  test_reranker_context.py  test_rerankers.py  test_syntax_chunker.py
