[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-rag-mcp"
version = "0.1.2"
description = "MCP server for efficient code search"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = {file = "LICENSE"}
authors = [
  {name = "Duc Nguyen", email = "duc@qduc.me"},
]
keywords = ["rag", "code-search", "embeddings", "semantic-search", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "chromadb>=1.3.5",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "einops>=0.6.0",
    "openai>=1.50.0",
    "python-dotenv>=0.21.0",
    "mcp>=0.9.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "twine>=4.0.0",
    "build>=1.0.0",
    "pytest-asyncio>=0.21.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
code-rag = "code_rag.mcp_server:main"
code-rag-cli = "code_rag.main:main"
code-rag-mcp = "code_rag.mcp_server:main"
code-rag-server = "code_rag.embedding_server:main"

[project.urls]
Homepage = "https://github.com/qduc/code-rag"
Issues = "https://github.com/qduc/code-rag/issues"

[tool.setuptools]
packages = [
    "code_rag",
    "code_rag.config",
    "code_rag.database",
    "code_rag.embeddings",
    "code_rag.index",
    "code_rag.processor",
    "code_rag.reranker",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
